--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.46.1",
+    "react-input-mask": "^2.0.4",
     "react-select": "^5.7.4",
     "react-transition-group": "^4.4.5",
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@types/react-input-mask": "^3.0.2",
     "sass": "^1.66.1"
   }
 }
